--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/app.js",
+    "start": "node dist/index.js",
     "preserve": "npm run build",
-    "serve": "nodemon dist/app.js"
+    "serve": "nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "rimraf": "^4.1.2"
