--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "preserve": "npm run build",
-    "serve": "nodemon dist/index.js"
+    "serve": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
+    "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   },
