--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "server": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "keywords": [],
   "author": "",
