--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --watchAll",
+    "test:watch": "jest --watch",
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
     "start": "node dist/index.js",
@@ -18,8 +19,9 @@
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
@@ -29,10 +31,11 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
