--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "rimraf": "^4.1.2"
   }
 }
