--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:watch": "jest --watch",
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "preserve": "npm run build",
     "server": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
     "postinstall": "tsc"
