--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "test": "jest --coverage --watchAll",
     "test:watch": "jest --watch",
-    "server": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
-    "build": "rimraf dist && tsc --build tsconfig.json",
-    "start": "node dist/index.js"
+    "build": "rimraf dist && npx tsc",
+    "prestart": "npm run build",
+    "start": "node dist/src/index.js",
+    "preserve": "npm run build",
+    "server": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.13.0",
+    "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "concurrently": "^7.6.0",
@@ -42,6 +45,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "pg": "^8.10.0",
     "rimraf": "^4.1.2"
   }
 }
