--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "axios": "^1.3.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
